# TaskManager

./: .gitignore  README.md  manage.sh  package-lock.json  package.json  やること.md  環境構築手順.md  開発工程.md
client/src-tauri/: Cargo.toml  tauri.conf.json  テストコマンド.md
client/src-tauri/data/: db_empty.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/api/: api.rs
client/src-tauri/src/command/: command_composite_macro.rs  command_macro.rs  command_multiple_id_macro.rs  command_single_id_macro.rs  defect.rs  issue.rs  milestone.rs  mod.rs  phase.rs  phase_aggregate.rs  project.rs  project_aggregate.rs  state.rs  task.rs  task_actual_cell.rs  task_plan_cell.rs
client/src-tauri/src/db/: crud_composite_macro.rs  crud_macro.rs  crud_multiple_id_macro.rs  database.rs  db_macro.rs  defect_crud.rs  delete_basic.rs  issue_crud.rs  milestone_crud.rs  mod.rs  phase_crud.rs  project_crud.rs  task_actual_cell_crud.rs  task_crud.rs  task_plan_cell_crud.rs
client/src-tauri/src/model/: defect.rs  issue.rs  milestone.rs  mod.rs  model_macro.rs  phase.rs  project.rs  tag.rs  task.rs  task_actual_cell.rs  task_plan_cell.rs  time_stamps.rs
client/src-tauri/src/service/: defect_service.rs  issue_service.rs  milestone_service.rs  mod.rs  phase_service.rs  (+11 more)
client/src-tauri/tests/: defect_service_tests.rs  defect_test.rs  issue_service_tests.rs  milestone_service_tests.rs  model_milestone_test.rs  model_project_test.rs  phase_service_tests.rs  project_service_tests.rs  project_test.rs  task_actual_cell_service_tests.rs  task_plan_cell_service_tests.rs  task_service_tests.rs
(+1053 files in other folders)
