[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "A Tauri App"
authors = ["you"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "tool/cargo-testgen",
]

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
uuid = { version = "1", features = ["v4"] }
